--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "socket.io-client": "^4.8.1",
+    "swiper": "^11.1.15",
     "ts-jest": "^29.2.5"
   },
   "devDependencies": {
